Add db and web support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-application.port=8081
-currency.server.address=http://www.floatrates.com/daily/%s.json
+server.port=8081
+valute.server.address=http://www.cbr.ru/scripts/XML_daily.asp
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=currency_converter
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
